Solve 06-flex-layout problem

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,54 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+
+/* SOLUTION BELOW */
+
+a {
+  text-decoration: none;
+  color: rgb(110, 110, 110);
+}
+
+ul {
+  list-style-type: none;
+}
+
+body {
+  display: flex; 
+  flex-direction: column;
+}
+
+.header, .footer {
+  display: flex; 
+  justify-content: space-between;
+  padding-right: 20px;
+}
+
+
+.content {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.left-links, .right-links {
+  display: flex; 
+  justify-content: flex-start;
+  gap: 8px;
+}
+
+
+button {
+  padding: 8px;
+}
+
+
+.footer {
+  display: flex;
+    justify-items: flex-end;
+  background-color: #eeeeee;
+}
